# rust-gpu-shadertoys

./: Cargo.toml  README.md  build.rs  flake.nix
shaders/: Cargo.toml
shaders/src/: a_lot_of_spheres.rs  a_question_of_time.rs  apollonian.rs  atmosphere_system_test.rs  bubble_buckey_balls.rs  clouds.rs  filtering_procedurals.rs  flappy_bird.rs  geodesic_tiling.rs  lib.rs  luminescence.rs  mandelbrot_smooth.rs  miracle_snowflakes.rs  morphing.rs  moving_square.rs  on_off_spikes.rs  phantom_star.rs  playing_marble.rs  protean_clouds.rs  raymarching_primitives.rs  seascape.rs  shader_art_coding_tutorial.rs  skyline.rs  soft_shadow_variation.rs  tileable_water_caustic.rs  tokyo.rs  voxel_pac_man.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
